--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <%= htmlWebpackPlugin.options.vendors %>
+    <%= htmlWebpackPlugin.options.vendorsReact %>
 </head>
 
 <body>
