--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
+  </head>
 
-</head>
-
-<body>
-    <div id="app">
-    </div>
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
